Add places controller class and ui files and update messages.properties

--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -74,7 +74,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/places/list}" class="abutton">
         Справочник площадок очного тура
     </a>
 </p>
