Add link to the Grades page

--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -50,7 +50,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/classes/list}" class="abutton">
         Справочник классов
     </a>
 </p>
