Update href attribute

--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -68,7 +68,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/institutes/list}" class="abutton">
         Справочник предпочитаемых вузов
     </a>
 </p>
