Fix bug related to the delete action
Fixed a bug where a delete action leads to a server crash when no items are checked

--- a/src/main/webapp/WEB-INF/view/admin/directories/places/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/places/list.html
@@ -36,8 +36,14 @@
         }
 
         function delPlace() {
-            if (areSure()) {
-                var places = document.getElementById("places");
+            var places = document.getElementById("places");
+            var flag = false;
+            places.elements["ids"].forEach(function (item){
+                if(item.checked){
+                    flag = true;
+                }
+            });
+            if (flag && areSure()) {
                 places.submit();
             }
             return false;
