--- a/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
@@ -25,7 +25,7 @@
 
 <div class="container">
     <p id="title">Списки и преподаватели, автоматически назначаемые группам при регистрации</p>
-    <div class="center col-6">
+    <div class="center">
         <div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error}"></div>
 
         <table class="table border center" aria-describedby="title">
@@ -63,8 +63,14 @@
                     <span th:if="${grade.codePhrase} != null" th:text="${grade.codePhrase}"></span>
                     <span th:unless="${grade.codePhrase} != null" style="color: red">Не назначена</span>
                 </td>
-                <td th:text="${grade.replyTo}"></td>
-                <td th:text="${grade.serviceEmail}"></td>
+                <td>
+                    <span th:if="${grade.replyTo} != null" th:text="${grade.replyTo}"></span>
+                    <span th:unless="${grade.replyTo} != null" style="color: red">Не назначен</span>
+                </td>
+                <td>
+                    <span th:if="${grade.serviceEmail} != null" th:text="${grade.serviceEmail}"></span>
+                    <span th:unless="${grade.serviceEmail} != null" style="color: red">Не назначен</span>
+                </td>
                 <td style="text-align: center">
                     <a href="#" class="abutton" data-toggle="modal" data-target=".rename-grade"
                        th:attr="grade-id=${grade.id}, grade-name=${grade.name}">переименовать</a>
@@ -87,13 +93,13 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Новый класс</h5>
+                    <h5 class="modal-title">Добавление нового класса</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!--/*@thymesVar id="grade" type="ru.spbu.distolymp.dto.admin.directories.lists.grades.GradeListDto"*/-->
+                    <!--/*@thymesVar id="grade" type="ru.spbu.distolymp.dto.admin.directories.lists.grades.GradeNameDto"*/-->
                     <form id="new-grade-form" th:object="${grade}"
                           th:action="@{/grades/add}" method="post">
                         <div class="form-group">
@@ -129,7 +135,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <!--/*@thymesVar id="grade" type="ru.spbu.distolymp.dto.admin.directories.lists.grades.GradeListDto"*/-->
+                    <!--/*@thymesVar id="grade" type="ru.spbu.distolymp.dto.admin.directories.lists.grades.GradeNameDto"*/-->
                     <form id="rename-grade-form" th:object="${grade}"
                           th:action="@{/grades/rename}" method="post">
                         <div class="form-group">
