--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -39,13 +39,7 @@
 
 <p>
     <a href="#" class="abutton">
-        Справочник районов
-    </a>
-</p>
-
-<p>
-    <a href="#" class="abutton">
-        Справочник учбеных заведений
+        Справочник учебных заведений
     </a>
 </p>
 
@@ -62,7 +56,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/diplomas/list}" class="abutton">
         Справочник дипломов
     </a>
 </p>
@@ -76,18 +70,6 @@
 <p>
     <a th:href="@{/places/list}" class="abutton">
         Справочник площадок очного тура
-    </a>
-</p>
-
-<p>
-    <a href="#" class="abutton">
-        Справочник награждений
-    </a>
-</p>
-
-<p>
-    <a href="#" class="abutton">
-        Справочник типов учебных заведений
     </a>
 </p>
 
