Add the link to countries page

--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -20,7 +20,7 @@
 <div th:replace="fragments/menu-staff :: #menustaff"></div>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/countries/list}" class="abutton">
         Справочник стран
     </a>
 </p>
