--- a/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
+++ b/src/main/webapp/WEB-INF/view/fragments/menu-staff.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 
 <ul id="menustaff">
@@ -14,9 +15,6 @@
         <a href="#">Преподаватели</a>
     </li>
     <li>
-        <a href="#">Регистраторы</a>
-    </li>
-    <li>
         <a href="#">Пользователи</a>
     </li>
     <li>
@@ -31,6 +29,7 @@
     <li>
         <a href="#">Настройки</a>
     </li>
+    <li></li>
     <li>
         <a href="#">Выход</a>
     </li>
