--- a/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
@@ -106,7 +106,7 @@
                             <label for="new-grade-name">Имя класса</label>
                             <input th:field="*{name}" placeholder="Новый класс"
                                    type="text" class="form-control" id="new-grade-name"
-                                   aria-describedby="categoryHelp">
+                                   aria-describedby="gradeHelp">
                             <small id="gradeHelp" class="form-text text-muted">Если имя будет пустым, новый
                                 класс не будет создан.
                             </small>
