--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -32,7 +32,7 @@
 </p>
 
 <p>
-    <a href="#" class="abutton">
+    <a th:href="@{/towns/list}" class="abutton">
         Справочник городов
     </a>
 </p>
