--- a/src/main/webapp/WEB-INF/view/admin/directories/grades/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/grades/edit.html
@@ -11,6 +11,7 @@
         p {
             text-align: center;
         }
+
         .error {
             color: red;
         }
@@ -31,11 +32,16 @@
         <fieldset>
             <legend>Значения по умолчанию для класса</legend>
             <table class="bgForm" aria-describedby="title">
-                <tr><th id="key"></th><th id="value"></th></tr>
+                <tr>
+                    <th id="key"></th>
+                    <th id="value"></th>
+                </tr>
                 <tr>
                     <td><label for="name">Класс:</label></td>
                     <td>
-                        <input id="name" type="text" th:value="${grade.name}" readonly />
+                        <input id="name" type="text" th:field="*{name}" size="50"/>
+                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error">
+                            Name error</span>
                     </td>
                 </tr>
                 <tr>
@@ -44,7 +50,8 @@
                     <td><select id="listing" th:field="*{listingId}">
                         <option th:value="null">Список не назначен</option>
                         <option th:each="listing : ${listingList}"
-                                th:value="${listing.id}" th:text="${listing.name}"></option></select>
+                                th:value="${listing.id}" th:text="${listing.name}"></option>
+                    </select>
                     </td>
                 </tr>
                 <tr>
@@ -53,40 +60,42 @@
                     <td><select id="staff" th:field="*{staffId}">
                         <option th:value="null">Преподаватель не назначен</option>
                         <option th:each="staff : ${staffList}"
-                                th:value="${staff.id}" th:text="${staff.login}"></option></select>
+                                th:value="${staff.id}" th:text="${staff.login}"></option>
+                    </select>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="registration">Регистрация:</label></td>
                     <td><select id="registration" th:field="*{registrationStatus}">
                         <option th:value="close" th:text="закрыта"></option>
-                        <option th:value="open" th:text="доступна"></option></select>
+                        <option th:value="open" th:text="доступна"></option>
+                    </select>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="codePhrase">Кодовая фраза:</label></td>
-                    <td><input  id="codePhrase" type="text" th:field="*{codePhrase}" size="67"/>
+                    <td><input id="codePhrase" type="text" th:field="*{codePhrase}" size="67"/>
                         <span th:if="${#fields.hasErrors('codePhrase')}" th:errors="*{codePhrase}" class="error">
                             Place code phrase error</span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="replyTo">Письмо участнику от имени (email):</label></td>
-                    <td><input  id="replyTo" type="text" th:field="*{replyTo}" size="67"/>
+                    <td><input id="replyTo" type="text" th:field="*{replyTo}" size="67"/>
                         <span th:if="${#fields.hasErrors('replyTo')}" th:errors="*{replyTo}" class="error">
                             Place reply to email error</span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="replyName">Письмо участнику от имени (name):</label></td>
-                    <td><input  id="replyName" type="text" th:field="*{replyName}" size="67"/>
+                    <td><input id="replyName" type="text" th:field="*{replyName}" size="67"/>
                         <span th:if="${#fields.hasErrors('replyName')}" th:errors="*{replyName}" class="error">
                             Place reply to name error</span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="serviceEmail">Служебная почта:</label></td>
-                    <td><input  id="serviceEmail" type="text" th:field="*{serviceEmail}" size="67"/>
+                    <td><input id="serviceEmail" type="text" th:field="*{serviceEmail}" size="67"/>
                         <span th:if="${#fields.hasErrors('serviceEmail')}" th:errors="*{serviceEmail}" class="error">
                             Place service email error</span>
                     </td>
