--- a/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/grades/list.html
@@ -84,7 +84,7 @@
 
         <div style="text-align:center; margin:0.5em;">
             <button type="button" class="btn btn-light border border-dark"
-                    data-toggle="modal" data-target=".new-grade">Добавить новый класс...
+                    data-toggle="modal" data-target=".new-grade">Добавить новый класс
             </button>
         </div>
 
