--- a/src/main/webapp/WEB-INF/view/admin/directories/places/edit.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/places/edit.html
@@ -26,10 +26,9 @@
     </a>
 </h3>
 
-<form th:action="@{/places/save-or-edit}" th:object="${place}" method="post">
+<form th:action="@{/places/save-or-update}" th:object="${place}" method="post">
     <div class="infoForm">
         <input type="hidden" th:field="*{id}"/>
-        <input type="hidden" th:field="*{divisionId}"/>
         <fieldset>
             <legend>Площадка очного тура</legend>
             <label for="order">№:</label>
