--- a/src/main/webapp/WEB-INF/view/admin/directories/diplomas/add.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/diplomas/add.html
@@ -59,7 +59,7 @@
             <div class="form-group">
                 <label for="name">Имя:</label>
                 <input type="text" style="width: 50%" th:field="*{name}" id="name"/>
-                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Country name error</span>
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Diploma name error</span>
 
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" th:field="*{portraitOrientation}"
