--- a/src/main/webapp/WEB-INF/view/admin/directories.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories.html
@@ -39,7 +39,13 @@
 
 <p>
     <a href="#" class="abutton">
-        Справочник учебных заведений
+        Справочник районов
+    </a>
+</p>
+
+<p>
+    <a th:href="@{/schools/list}" class="abutton">
+        Справочник учбеных заведений
     </a>
 </p>
 
