--- a/src/main/webapp/WEB-INF/view/admin/directories/schools/list.html
+++ b/src/main/webapp/WEB-INF/view/admin/directories/schools/list.html
@@ -243,7 +243,7 @@
 
     function getParams() {
         let params = {}
-        //params["resultSize"] = getResultSize();
+        params["resultSize"] = getResultSize();
         params["title"] = getTitle();
         params["number"] = getNumber();
         params["countryId"] = getCountryId();
